--- a/jetbrains-core/src/software/aws/toolkits/jetbrains/services/sqs/CreateQueuePanel.form
+++ b/jetbrains-core/src/software/aws/toolkits/jetbrains/services/sqs/CreateQueuePanel.form
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="software.aws.toolkits.jetbrains.services.sqs.CreateQueuePanel">
-  <grid id="27dc6" binding="component" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="component" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="627" height="385"/>
+      <xy x="20" y="20" width="530" height="359"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="52410" class="javax.swing.JTextField" binding="queueName">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="400" height="-1"/>
-            <preferred-size width="400" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <toolTipText value=""/>
-        </properties>
-      </component>
       <component id="7f54b" class="com.intellij.ui.components.JBLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -55,22 +44,41 @@
           <text resource-bundle="software/aws/toolkits/resources/localized_messages" key="sqs.create.queue.name.label"/>
         </properties>
       </component>
-      <component id="4b242" class="javax.swing.JLabel" binding="fifoSuffixLabel">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=".fifo"/>
-        </properties>
-      </component>
       <component id="707cf" class="javax.swing.JLabel" binding="queueNameContextHelp">
         <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
         </properties>
       </component>
+      <grid id="d18f7" binding="textPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="400" height="-1"/>
+            <preferred-size width="400" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="52410" class="javax.swing.JTextField" binding="queueName">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <text value=""/>
+              <toolTipText value=""/>
+            </properties>
+          </component>
+          <component id="3b56f" class="javax.swing.JTextField" binding="fifoSuffixField">
+            <constraints border-constraint="East"/>
+            <properties>
+              <columns value="3"/>
+              <editable value="false"/>
+              <enabled value="true"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
   <buttonGroups>
