--- a/jetbrains-core/src/software/aws/toolkits/jetbrains/services/sqs/CreateQueuePanel.form
+++ b/jetbrains-core/src/software/aws/toolkits/jetbrains/services/sqs/CreateQueuePanel.form
@@ -69,14 +69,13 @@
               <toolTipText value=""/>
             </properties>
           </component>
-          <component id="3b56f" class="javax.swing.JTextField" binding="fifoSuffixField">
+          <grid id="ffd81" binding="fifoSuffix" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints border-constraint="East"/>
-            <properties>
-              <columns value="3"/>
-              <editable value="false"/>
-              <enabled value="true"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </grid>
     </children>
