correction to select options for containerBuild field

--- a/media/css/samInvokeForm.css
+++ b/media/css/samInvokeForm.css
@@ -2,9 +2,11 @@ form {
     padding: 15px;
 }
 
-h2 {
+.section-header {
     margin: 0px;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 div {
