Added remaining fields to form

--- a/media/css/samInvokeForm.css
+++ b/media/css/samInvokeForm.css
@@ -93,6 +93,10 @@ textarea {
     padding: 5px 10px;
 }
 
+.required {
+    color: red;
+}
+
 #form-title {
     font-size: large;
     font-weight: bold;
