--- a/media/css/samInvokeForm.css
+++ b/media/css/samInvokeForm.css
@@ -46,10 +46,15 @@ textarea {
 }
 
 .invoke-button-container {
+    padding-top: 25px;
+    position: sticky;
+    bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
     padding-right: 0px;
+    background-color: var(--vscode-tab-activeBackground);
 }
 
 .tooltip {
