--- a/media/css/samInvokeForm.css
+++ b/media/css/samInvokeForm.css
@@ -46,48 +46,15 @@ textarea {
 }
 
 .invoke-button-container {
-    padding-top: 25px;
+    border: rgb(211, 130, 38) dashed 1px;
+    padding: 15px 15px 5px 15px;
     position: sticky;
     bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 0px;
     background-color: var(--vscode-tab-activeBackground);
-}
-
-.tooltip {
-    border: white solid 1px;
-    border-radius: 50%;
-    padding: 0 7px;
-}
-
-.tooltip .tooltip-text {
-    visibility: hidden;
-    width: 40vw;
-    border: solid 1px rgb(211, 130, 38);
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    top: 80px;
-    right: 40px;
-}
-
-.tooltip .tooltip-text::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    margin-top: -5px;
-}
-  
-.tooltip:hover .tooltip-text {
-    visibility: visible;
-    cursor: pointer;
 }
 
 .json-parse-error {
