--- a/media/css/samInvokeForm.css
+++ b/media/css/samInvokeForm.css
@@ -2,9 +2,11 @@ form {
     padding: 15px;
 }
 
-h2 {
+.section-header {
     margin: 0px;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 div {
@@ -44,43 +46,15 @@ textarea {
 }
 
 .invoke-button-container {
+    border: rgb(211, 130, 38) dashed 1px;
+    padding: 15px 15px 5px 15px;
+    position: sticky;
+    bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    padding-right: 0px;
-}
-
-.tooltip {
-    border: white solid 1px;
-    border-radius: 50%;
-    padding: 0 7px;
-}
-
-.tooltip .tooltip-text {
-    visibility: hidden;
-    width: 40vw;
-    border: solid 1px rgb(211, 130, 38);
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    top: 80px;
-    right: 40px;
-}
-
-.tooltip .tooltip-text::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    margin-top: -5px;
-}
-  
-.tooltip:hover .tooltip-text {
-    visibility: visible;
-    cursor: pointer;
+    align-items: center;
+    background-color: var(--vscode-tab-activeBackground);
 }
 
 .json-parse-error {
@@ -91,6 +65,10 @@ textarea {
     padding: 5px 10px;
 }
 
+.required {
+    color: red;
+}
+
 #form-title {
     font-size: large;
     font-weight: bold;
@@ -98,4 +76,8 @@ textarea {
 
 #invoke-button {
     margin-left: 20px;
+}
+
+#target-type-selector {
+    margin-bottom: 15px;
 }
